--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/preset-react": "^7.24.1",
     "babel-loader": "^9.1.3",
     "css-loader": "^7.1.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.0",
     "sass": "^1.75.0",
     "sass-loader": "^14.2.1",
