--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "manuals",
   "version": "1.0.0",
   "description": "manuals",
-  "main": "index.js",
+  "main": "index.tsx",
   "scripts": {
     "start": "webpack-dev-server",
     "build": "SET NODE_ENV=development && webpack"
@@ -23,6 +23,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.24.4",
     "@babel/preset-react": "^7.24.1",
+    "@babel/preset-typescript": "^7.24.1",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
     "babel-loader": "^9.1.3",
@@ -32,8 +33,10 @@
     "sass": "^1.75.0",
     "sass-loader": "^14.2.1",
     "style-loader": "^4.0.0",
+    "ts-loader": "^9.5.1",
     "typescript": "^5.4.5",
     "webpack": "^5.91.0",
+    "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
   }
